--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,11 +6,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "backend/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "source": "/(.*)",
+      "destination": "backend/index.js"
     }
   ],
   "headers": [
@@ -19,7 +18,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://green-sphere-deployed-frontend.vercel.app"
+          "value": "https://green-sphere-for-deployment-frontend.vercel.app/"
         },
         {
           "key": "Access-Control-Allow-Credentials",
